fix overflow-x

--- a/css/entry.css
+++ b/css/entry.css
@@ -3934,4 +3934,5 @@ pre {
 
 :root,body {
     height: auto;
+    overflow-x: hidden;
 }
